--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.twitter">
+          package="com.example.reddit">
 
     <application
-            android:name=".App"
+            android:name="com.example.reddit.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.reddit.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,12 +18,12 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".TwitterGridActivity"
+                android:name="com.example.reddit.RedditGridActivity"
                 android:label="@string/title_activity_twitter_grid_activty"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name=".LoginActivity"
+                android:name="com.example.reddit.LoginActivity"
                 android:noHistory="true">
         </activity>
     </application>
