titles of action bar and image loading for grid view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.reddit">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:name="com.example.reddit.App"
+            android:name=".App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.example.reddit.MainActivity">
+        <activity
+                android:name=".RedditDetailedActivity"
+                android:label="@string/title_activity_reddit_detailed"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,12 +25,12 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.example.reddit.RedditGridActivity"
+                android:name=".RedditGridActivity"
                 android:label="@string/title_activity_twitter_grid_activty"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name="com.example.reddit.LoginActivity"
+                android:name=".LoginActivity"
                 android:noHistory="true">
         </activity>
     </application>
