--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -53,6 +54,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.0.0"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
     annotationProcessor "com.google.dagger:dagger-compiler:2.15"
 }
